--- a/templates/56/php.ini.j2
+++ b/templates/56/php.ini.j2
@@ -302,7 +302,7 @@ serialize_precision = 17
 ; It receives a comma-delimited list of function names. This directive is
 ; *NOT* affected by whether Safe Mode is turned On or Off.
 ; http://php.net/disable-functions
-disable_functions = {{ disable_functions }} 
+disable_functions = {{ php_disable_functions }} 
 
 ; This directive allows you to disable certain classes for security reasons.
 ; It receives a comma-delimited list of class names. This directive is
@@ -330,7 +330,7 @@ disable_classes =
 ; be increased on systems where PHP opens many files to reflect the quantity of
 ; the file operations performed.
 ; http://php.net/realpath-cache-size
-realpath_cache_size = {{ realpath_cache_size }}
+realpath_cache_size = {{ php_realpath_cache_size }}
 
 ; Duration of time, in seconds for which to cache realpath information for a given
 ; file or directory. For systems with rarely changing files, consider increasing this
@@ -363,7 +363,7 @@ zend.enable_gc = On
 ; threat in any way, but it makes it possible to determine whether you use PHP
 ; on your server or not.
 ; http://php.net/expose-php
-expose_php = {{ expose_php }}
+expose_php = {{ php_expose_php }}
 
 ;;;;;;;;;;;;;;;;;;;
 ; Resource Limits ;
@@ -372,7 +372,7 @@ expose_php = {{ expose_php }}
 ; Maximum execution time of each script, in seconds
 ; http://php.net/max-execution-time
 ; Note: This directive is hardcoded to 0 for the CLI SAPI
-max_execution_time = {{ max_execution_time }}
+max_execution_time = {{ php_max_execution_time }}
 
 ; Maximum amount of time each script may spend parsing request data. It's a good
 ; idea to limit this time on productions servers in order to eliminate unexpectedly
@@ -382,7 +382,7 @@ max_execution_time = {{ max_execution_time }}
 ; Development Value: 60 (60 seconds)
 ; Production Value: 60 (60 seconds)
 ; http://php.net/max-input-time
-max_input_time = {{ max_input_time }}
+max_input_time = {{ php_max_input_time }}
 
 ; Maximum input variable nesting level
 ; http://php.net/max-input-nesting-level
@@ -393,7 +393,7 @@ max_input_time = {{ max_input_time }}
 
 ; Maximum amount of memory a script may consume (128MB)
 ; http://php.net/memory-limit
-memory_limit = {{ memory_limit }}
+memory_limit = {{ php_memory_limit }}
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Error handling and logging ;
@@ -574,7 +574,7 @@ html_errors = On
 ; Example:
 ;error_log = php_errors.log
 ; Log errors to syslog.
-error_log = {{ error_log }}
+error_log = {{ php_error_log }}
 
 ;windows.show_crt_warning
 ; Default value: 0
@@ -660,7 +660,7 @@ auto_globals_jit = On
 ; Its value may be 0 to disable the limit. It is ignored if POST data reading
 ; is disabled through enable_post_data_reading.
 ; http://php.net/post-max-size
-post_max_size = {{ post_max_size }}
+post_max_size = {{ php_post_max_size }}
 
 ; Automatically add files before PHP document.
 ; http://php.net/auto-prepend-file
@@ -804,11 +804,11 @@ file_uploads = On
 ; Temporary directory for HTTP uploaded files (will use system default if not
 ; specified).
 ; http://php.net/upload-tmp-dir
-upload_tmp_dir = {{ upload_tmp_dir }}
+upload_tmp_dir = {{ php_upload_tmp_dir }}
 
 ; Maximum allowed size for uploaded files.
 ; http://php.net/upload-max-filesize
-upload_max_filesize = {{ upload_max_filesize }}
+upload_max_filesize = {{ php_upload_max_filesize }}
 
 ; Maximum number of files that can be uploaded via a single request
 max_file_uploads = 20
@@ -886,7 +886,7 @@ cli_server.color = On
 [Date]
 ; Defines the default timezone used by the date functions
 ; http://php.net/date.timezone
-date.timezone = {{ date_timezone }}
+date.timezone = {{ php_date_timezone }}
 
 ; http://php.net/date.default-latitude
 ;date.default_latitude = 31.7667
