--- a/templates/56/php-fpm.conf.j2
+++ b/templates/56/php-fpm.conf.j2
@@ -42,13 +42,13 @@ error_log = {{ php_error_log }}
 ; Log level
 ; Possible Values: alert, error, warning, notice, debug
 ; Default Value: notice
-;log_level = notice
+log_level = {{ php_log_level }}
 
 ; If this number of child processes exit with SIGSEGV or SIGBUS within the time
 ; interval set by emergency_restart_interval then FPM will restart. A value
 ; of '0' means 'Off'.
 ; Default Value: 0
-emergency_restart_threshold = 60
+emergency_restart_threshold = {{ php_emergency_restart_threshold }}
 
 ; Interval of time used by emergency_restart_interval to determine when 
 ; a graceful restart will be initiated.  This can be useful to work around
@@ -56,13 +56,13 @@ emergency_restart_threshold = 60
 ; Available Units: s(econds), m(inutes), h(ours), or d(ays)
 ; Default Unit: seconds
 ; Default Value: 0
-emergency_restart_interval = 60
+emergency_restart_interval = {{ php_emergency_restart_interval }}
 
 ; Time limit for child processes to wait for a reaction on signals from master.
 ; Available units: s(econds), m(inutes), h(ours), or d(ays)
 ; Default Unit: seconds
 ; Default Value: 0
-;process_control_timeout = 0
+process_control_timeout = {{ php_process_control_timeout }}
 
 ; The maximum number of processes FPM will fork. This has been design to control
 ; the global number of processes when using dynamic PM within a lot of pools.
