modified:   defaults/main.yml 	modified:   files/php-fpm_exporter.tar.xz 	modified:   handlers/RedHat.yml 	modified:   tasks/RedHat.yml 	new file:   tasks/configureation.yml 	modified:   tasks/exporter.yml 	new file:   tasks/firewall.yml 	modified:   tasks/main.yml 	new file:   tasks/register.yml 	modified:   templates/56/php.ini.j2 	modified:   vars/RedHat.yml 	modified:   vars/main.yml

--- a/templates/56/php.ini.j2
+++ b/templates/56/php.ini.j2
@@ -302,7 +302,7 @@ serialize_precision = 17
 ; It receives a comma-delimited list of function names. This directive is
 ; *NOT* affected by whether Safe Mode is turned On or Off.
 ; http://php.net/disable-functions
-disable_functions = {{ php_disable_functions }} 
+disable_functions = {{ ", ".join(vars["php_disable_functions"]) }}
 
 ; This directive allows you to disable certain classes for security reasons.
 ; It receives a comma-delimited list of class names. This directive is
