--- a/templates/php-fpm.conf.j2
+++ b/templates/php-fpm.conf.j2
@@ -8,7 +8,7 @@
 ; Include one or more files. If glob(3) exists, it is used to include a bunch of
 ; files from a glob(3) pattern. This directive can be used everywhere in the
 ; file.
-include=/etc/opt/remi/php73/php-fpm.d/*.conf
+include=/etc/opt/remi/php{{ php_version }}/php-fpm.d/*.conf
 
 ;;;;;;;;;;;;;;;;;;
 ; Global Options ;
@@ -17,13 +17,13 @@ include=/etc/opt/remi/php73/php-fpm.d/*.conf
 [global]
 ; Pid file
 ; Default Value: none
-pid = /var/opt/remi/php73/run/php-fpm/php-fpm.pid
+pid = /var/opt/remi/php{{ php_version }}/run/php-fpm/php-fpm.pid
 
 ; Error log file
 ; If it's set to "syslog", log is sent to syslogd instead of being written
 ; in a local file.
-; Default Value: /var/opt/remi/php73/log/php-fpm.log
-error_log = /var/opt/remi/php73/log/php-fpm/error.log
+; Default Value: /var/opt/remi/php{{ php_version }}/log/php-fpm.log
+error_log = /var/opt/remi/php{{ php_version }}/log/php-fpm/error.log
 
 ; syslog_facility is used to specify what type of program is logging the
 ; message. This lets syslogd specify that messages from different facilities
@@ -41,7 +41,7 @@ error_log = /var/opt/remi/php73/log/php-fpm/error.log
 ; Log level
 ; Possible Values: alert, error, warning, notice, debug
 ; Default Value: notice
-;log_level = notice
+log_level = {{ php_log_level | default('notice') }}
 
 ; Log limit on number of characters in the single line (log entry). If the
 ; line is over the limit, it is wrapped on multiple lines. The limit is for
@@ -65,7 +65,7 @@ error_log = /var/opt/remi/php73/log/php-fpm/error.log
 ; interval set by emergency_restart_interval then FPM will restart. A value
 ; of '0' means 'Off'.
 ; Default Value: 0
-;emergency_restart_threshold = 0
+emergency_restart_threshold = {{ php_emergency_restart_threshold | default('20') }}
 
 ; Interval of time used by emergency_restart_interval to determine when
 ; a graceful restart will be initiated.  This can be useful to work around
@@ -73,13 +73,13 @@ error_log = /var/opt/remi/php73/log/php-fpm/error.log
 ; Available Units: s(econds), m(inutes), h(ours), or d(ays)
 ; Default Unit: seconds
 ; Default Value: 0
-;emergency_restart_interval = 0
+emergency_restart_interval = {{ php_emergency_restart_interval | default('60') }}
 
 ; Time limit for child processes to wait for a reaction on signals from master.
 ; Available units: s(econds), m(inutes), h(ours), or d(ays)
 ; Default Unit: seconds
 ; Default Value: 0
-;process_control_timeout = 0
+process_control_timeout = {{ php_process_control_timeout | default('20') }}
 
 ; The maximum number of processes FPM will fork. This has been designed to control
 ; the global number of processes when using dynamic PM within a lot of pools.
@@ -133,5 +133,5 @@ daemonize = yes
 ; used in logs and stats. There is no limitation on the number of pools which
 ; FPM can handle. Your system will tell you anyway :)
 
-; See /etc/opt/remi/php73/php-fpm.d/*.conf
+; See /etc/opt/remi/php{{ php_version }}/php-fpm.d/*.conf
 
