--- a/templates/www.conf.j2
+++ b/templates/www.conf.j2
@@ -21,9 +21,9 @@
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
 ; RPM: apache user chosen to provide access to the same directories as httpd
-user = apache
+user = {{ php_user | default('nobody') }}
 ; RPM: Keep a group allowed to write in log dir.
-group = apache
+group = {{ php_group | default('nobody') }}}
 
 ; The address on which to accept FastCGI requests.
 ; Valid syntaxes are:
@@ -35,19 +35,19 @@ group = apache
 ;                            (IPv6 and IPv4-mapped) on a specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-listen = 127.0.0.1:9000
+listen = {{ php_listen | default('127.0.0.1') }}:{{ php_fpm_port | default('9000') }}
 
 ; Set listen(2) backlog.
 ; Default Value: 511
-;listen.backlog = 511
+listen.backlog = {{ php_listen_backlog | default('16384') }}
 
 ; Set permissions for unix socket, if one is used. In Linux, read/write
 ; permissions must be set in order to allow connections from a web server.
 ; Default Values: user and group are set as the running user
 ;                 mode is set to 0660
-;listen.owner = nobody
-;listen.group = nobody
-;listen.mode = 0660
+listen.owner = {{ php_listen_owner | default('nobody') }}
+listen.group = {{ php_listen_group | default('nobody') }}
+listen.mode = {{ php_listen_mode | default('0660') }}
 
 ; When POSIX Access Control Lists are supported you can set them using
 ; these options, value is a comma separated list of user/group names.
@@ -61,7 +61,7 @@ listen = 127.0.0.1:9000
 ; must be separated by a comma. If this value is left blank, connections will be
 ; accepted from any ip address.
 ; Default Value: any
-listen.allowed_clients = 127.0.0.1
+listen.allowed_clients = {{ php_listen_allowed_clients | default('127.0.0.1') }}
 
 ; Specify the nice(2) priority to apply to the pool processes (only if set)
 ; The value can vary from -19 (highest priority) to 20 (lower priority)
@@ -101,7 +101,7 @@ listen.allowed_clients = 127.0.0.1
 ;             pm.process_idle_timeout   - The number of seconds after which
 ;                                         an idle process will be killed.
 ; Note: This value is mandatory.
-pm = dynamic
+pm = {{ php_pm | default('dynamic') }}
 
 ; The number of child processes to be created when pm is set to 'static' and the
 ; maximum number of child processes when pm is set to 'dynamic' or 'ondemand'.
@@ -112,12 +112,12 @@ pm = dynamic
 ; forget to tweak pm.* to fit your needs.
 ; Note: Used when pm is set to 'static', 'dynamic' or 'ondemand'
 ; Note: This value is mandatory.
-pm.max_children = 50
+pm.max_children = {% if ansible_memtotal_mb >= 3072%}{{ (( ansible_memtotal_mb - 1024 ) / 55) | int }}{% else %}20{% endif %}
 
 ; The number of child processes created on startup.
 ; Note: Used only when pm is set to 'dynamic'
 ; Default Value: min_spare_servers + (max_spare_servers - min_spare_servers) / 2
-pm.start_servers = 5
+pm.start_servers = {% if ansible_memtotal_mb >= 3072%}{{ (( ansible_memtotal_mb - 1024 ) / 100) | int }}{% else %}5{% endif %}
 
 ; The desired minimum number of idle server processes.
 ; Note: Used only when pm is set to 'dynamic'
@@ -138,7 +138,7 @@ pm.max_spare_servers = 35
 ; This can be useful to work around memory leaks in 3rd party libraries. For
 ; endless request processing specify '0'. Equivalent to PHP_FCGI_MAX_REQUESTS.
 ; Default Value: 0
-;pm.max_requests = 500
+pm.max_requests = {{ php_pm_max_requests | default('500') }}
 
 ; The URI to view the FPM status page. If this value is not set, no URI will be
 ; recognized as a status page. It shows the following informations:
@@ -237,7 +237,7 @@ pm.max_spare_servers = 35
 ;       anything, but it may not be a good idea to use the .php extension or it
 ;       may conflict with a real PHP file.
 ; Default Value: not set
-;pm.status_path = /status
+pm.status_path = /status
 
 ; The ping URI to call the monitoring page of FPM. If this value is not set, no
 ; URI will be recognized as a ping page. This could be used to test from outside
@@ -322,7 +322,7 @@ pm.max_spare_servers = 35
 ; The log file for slow requests
 ; Default Value: not set
 ; Note: slowlog is mandatory if request_slowlog_timeout is set
-slowlog = /var/opt/remi/php73/log/php-fpm/www-slow.log
+slowlog = /var/opt/remi/php{{ php_version }}/log/php-fpm/www-slow.log
 
 ; The timeout for serving a single request after which a PHP backtrace will be
 ; dumped to the 'slowlog' file. A value of '0s' means 'off'.
@@ -343,12 +343,12 @@ slowlog = /var/opt/remi/php73/log/php-fpm/www-slow.log
 
 ; Set open file descriptor rlimit.
 ; Default Value: system defined value
-;rlimit_files = 1024
+rlimit_files = 65535
 
 ; Set max core size rlimit.
 ; Possible Values: 'unlimited' or an integer greater or equal to 0
 ; Default Value: system defined value
-;rlimit_core = 0
+rlimit_core = unlimited
 
 ; Chroot to this directory at the start. This value must be defined as an
 ; absolute path. When this value is not set, chroot is not used.
@@ -420,7 +420,7 @@ slowlog = /var/opt/remi/php73/log/php-fpm/www-slow.log
 ;                specified at startup with the -d argument
 ;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
 ;php_flag[display_errors] = off
-php_admin_value[error_log] = /var/opt/remi/php73/log/php-fpm/www-error.log
+php_admin_value[error_log] = /var/opt/remi/php{{ php_version }}/log/php-fpm/www-error.log
 php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 128M
 
@@ -433,6 +433,6 @@ php_admin_flag[log_errors] = on
 ; See warning about choosing the location of these directories on your system
 ; at http://php.net/session.save-path
 php_value[session.save_handler] = files
-php_value[session.save_path]    = /var/opt/remi/php73/lib/php/session
-php_value[soap.wsdl_cache_dir]  = /var/opt/remi/php73/lib/php/wsdlcache
-;php_value[opcache.file_cache]  = /var/opt/remi/php73/lib/php/opcache
+php_value[session.save_path]    = /var/opt/remi/php{{ php_version }}/lib/php/session
+php_value[soap.wsdl_cache_dir]  = /var/opt/remi/php{{ php_version }}/lib/php/wsdlcache
+;php_value[opcache.file_cache]  = /var/opt/remi/php{{ php_version }}/lib/php/opcache
