--- a/templates/www.conf.j2
+++ b/templates/www.conf.j2
@@ -23,7 +23,7 @@
 ; RPM: apache user chosen to provide access to the same directories as httpd
 user = {{ php_user | default('nobody') }}
 ; RPM: Keep a group allowed to write in log dir.
-group = {{ php_group | default('nobody') }}}
+group = {{ php_group | default('nobody') }}
 
 ; The address on which to accept FastCGI requests.
 ; Valid syntaxes are:
@@ -112,12 +112,12 @@ pm = {{ php_pm | default('dynamic') }}
 ; forget to tweak pm.* to fit your needs.
 ; Note: Used when pm is set to 'static', 'dynamic' or 'ondemand'
 ; Note: This value is mandatory.
-pm.max_children = {% if ansible_memtotal_mb >= 3072%}{{ (( ansible_memtotal_mb - 1024 ) / 55) | int }}{% else %}20{% endif %}
+pm.max_children = {% if ansible_memtotal_mb >= 3072%}{{ (( ansible_memtotal_mb - 1024 ) / 55) | int }}{% else %}50{% endif %}
 
 ; The number of child processes created on startup.
 ; Note: Used only when pm is set to 'dynamic'
 ; Default Value: min_spare_servers + (max_spare_servers - min_spare_servers) / 2
-pm.start_servers = {% if ansible_memtotal_mb >= 3072%}{{ (( ansible_memtotal_mb - 1024 ) / 100) | int }}{% else %}5{% endif %}
+pm.start_servers = 5
 
 ; The desired minimum number of idle server processes.
 ; Note: Used only when pm is set to 'dynamic'
@@ -308,12 +308,12 @@ pm.status_path = /status
 ;      it can accept a strftime(3) format:
 ;      %d/%b/%Y:%H:%M:%S %z (default)
 ;      The strftime(3) format must be encapsuled in a %{<strftime_format>}t tag
-;      e.g. for a ISO8601 formatted timestring, use: %{%Y-%m-%dT%H:%M:%S%z}t
+;      e.g.
 ;  %T: time the log has been written (the request has finished)
 ;      it can accept a strftime(3) format:
 ;      %d/%b/%Y:%H:%M:%S %z (default)
 ;      The strftime(3) format must be encapsuled in a %{<strftime_format>}t tag
-;      e.g. for a ISO8601 formatted timestring, use: %{%Y-%m-%dT%H:%M:%S%z}t
+;      e.g.
 ;  %u: remote user
 ;
 ; Default: "%R - %u %t \"%m %r\" %s"
