--- a/templates/php-fpm.conf.j2
+++ b/templates/php-fpm.conf.j2
@@ -23,7 +23,8 @@ pid = /var/opt/remi/php{{ php_version }}/run/php-fpm/php-fpm.pid
 ; If it's set to "syslog", log is sent to syslogd instead of being written
 ; in a local file.
 ; Default Value: /var/opt/remi/php{{ php_version }}/log/php-fpm.log
-error_log = /var/opt/remi/php{{ php_version }}/log/php-fpm/error.log
+;error_log = /var/opt/remi/php{{ php_version }}/log/php-fpm/error.log
+error_log = {{ php_error_log | default('syslog') }}
 
 ; syslog_facility is used to specify what type of program is logging the
 ; message. This lets syslogd specify that messages from different facilities
@@ -102,12 +103,12 @@ daemonize = yes
 
 ; Set open file descriptor rlimit for the master process.
 ; Default Value: system defined value
-;rlimit_files = 1024
+rlimit_files = 65535
 
 ; Set max core size rlimit for the master process.
 ; Possible Values: 'unlimited' or an integer greater or equal to 0
 ; Default Value: system defined value
-;rlimit_core = 0
+rlimit_core = unlimited
 
 ; Specify the event mechanism FPM will use. The following is available:
 ; - select     (any POSIX os)
