modified:   README.md 	modified:   defaults/main.yml 	modified:   files/php-fpm_exporter.tar.xz 	modified:   tasks/RedHat.yml 	modified:   tasks/register.yml 	modified:   templates/php-fpm_exporter.default.j2 	modified:   templates/www.conf.j2 	modified:   vars/RedHat.yml

--- a/templates/php-fpm_exporter.default.j2
+++ b/templates/php-fpm_exporter.default.j2
@@ -1,1 +1,1 @@
-PHP_FPM_EXPORTER_OPTS='--phpfpm.scrape-uri tcp://127.0.0.1:{{ php_fpm_port }}/status --web.listen-address ":{{ php_fpm_exporter_port }}"'
+PHP_FPM_EXPORTER_OPTS='--phpfpm.scrape-uri tcp://{{ ansible_default_ipv4.address }}:{{ php_fpm_port }}/status --web.listen-address "{{ ansible_default_ipv4.address }}:{{ php_fpm_exporter_port }}"'
