--- a/templates/www.conf.j2
+++ b/templates/www.conf.j2
@@ -35,7 +35,7 @@ group = {{ php_group | default('nobody') }}
 ;                            (IPv6 and IPv4-mapped) on a specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-listen = {{ php_listen | default('127.0.0.1') }}:{{ php_fpm_port | default('9000') }}
+listen = {{ ansible_default_ipv4.address }}:{{ php_fpm_port | default('9000') }}
 
 ; Set listen(2) backlog.
 ; Default Value: 511
