--- a/templates/php-fpm.conf.j2
+++ b/templates/php-fpm.conf.j2
@@ -8,7 +8,7 @@
 ; Include one or more files. If glob(3) exists, it is used to include a bunch of
 ; files from a glob(3) pattern. This directive can be used everywhere in the
 ; file.
-include=/etc/opt/remi/php{{ php_version }}/php-fpm.d/*.conf
+include=/etc/php-fpm.d/*.conf
 
 ;;;;;;;;;;;;;;;;;;
 ; Global Options ;
@@ -17,13 +17,13 @@ include=/etc/opt/remi/php{{ php_version }}/php-fpm.d/*.conf
 [global]
 ; Pid file
 ; Default Value: none
-pid = /var/opt/remi/php{{ php_version }}/run/php-fpm/php-fpm.pid
+pid = /var/run/php-fpm/php-fpm.pid
 
 ; Error log file
 ; If it's set to "syslog", log is sent to syslogd instead of being written
 ; in a local file.
-; Default Value: /var/opt/remi/php{{ php_version }}/log/php-fpm.log
-;error_log = /var/opt/remi/php{{ php_version }}/log/php-fpm/error.log
+; Default Value: /var/php-fpm.log
+;error_log = /var/log/php-fpm/error.log
 error_log = {{ php_error_log | default('syslog') }}
 
 ; syslog_facility is used to specify what type of program is logging the
@@ -134,4 +134,4 @@ rlimit_core = unlimited
 ; used in logs and stats. There is no limitation on the number of pools which
 ; FPM can handle. Your system will tell you anyway :)
 
-; See /etc/opt/remi/php{{ php_version }}/php-fpm.d/*.conf
+; See /etc/php-fpm.d/*.conf
