modified:   README.md 	modified:   defaults/main.yml 	modified:   tasks/exporter.yml 	modified:   templates/php-fpm_exporter.service.j2 	modified:   templates/www.conf.j2 	modified:   vars/RedHat.yml

--- a/templates/php-fpm_exporter.service.j2
+++ b/templates/php-fpm_exporter.service.j2
@@ -5,8 +5,8 @@ After=network.target
 
 [Service]
 EnvironmentFile=-/etc/default/php-fpm_exporter
-User=nobody
-Group=nobody
+User=apache
+Group=apache
 Type=simple
 LimitNOFILE=4096
 LimitNPROC=4096
