--- a/templates/php-fpm_exporter.default.j2
+++ b/templates/php-fpm_exporter.default.j2
@@ -1,1 +1,1 @@
-PHP_FPM_EXPORTER_OPTS='--phpfpm.scrape-uri tcp://{{ ansible_default_ipv4.address }}:{{ php_fpm_port }}/status --web.listen-address "{{ ansible_default_ipv4.address }}:{{ php_fpm_exporter_port }}"'
+PHP_FPM_EXPORTER_OPTS='--phpfpm.scrape-uri tcp://{{ ansible_default_ipv4.address }}:{{ php_fpm_port }}/status --web.listen-address "{{ ansible_default_ipv4.address }}:{{ php_fpm_exporter_port }}" --phpfpm.fix-process-count'
